k8s/overlays/stage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskflow-stage
  labels:
    environment: stage
    branch: staging
