k8s/overlays/stage/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
spec:
  template:
    spec:
      containers:
        - name: task-service
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
